# My-projects

./: Croitor Sebastian_python.rar
CROITOR IULIUS SEBASTIAN-312/: readme.txt
CROITOR IULIUS SEBASTIAN-312/Croitor Sebastian_c++/: Exceptions.h  Friends.cpp  Message.cpp  Message.h  Node.h  RepositoryFriends.cpp  RepositoryFriends.h  RepositoryUser.h  ServiceFriends.h  ServiceMessage.cpp  ServiceMessage.h  ServiceUser.cpp  ServiceUser.h  User.cpp  User.h  UserInterface.cpp  UserInterface.h
Croitor Sebastian_c++/: CMakeLists.txt  Exceptions.cpp  Friends.h  List.h  Multimap.h  RepositoryMessage.cpp  RepositoryMessage.h  RepositoryUser.cpp  ServiceFriends.cpp  main.cpp
Croitor Sebastian_py/: card_client.json  films.json  main.py  reservation.json  utils.py
Croitor Sebastian_py/Domain/: add_operations.py  card_client.py  film_validator.py  generate_operation.py  reservation.py  reservation_validator.py  waterfall_undo_redo.py
Croitor Sebastian_py/Repository/: json_repository.py  repository.py
Domain/: card_client_validator.py  delete_operations.py  film.py  increase.py  interval_Del.py  modelview.py  update_operations.py
Repository/: exceptions.py
Service/: RandomEntityGenerate.py  film_service.py  reservation_service.py  undo_redo_service.py  waterfall.py
Tests/: test_card333.json  test_card_client.json  test_card_client_orderd  test_card_client_search.json  test_card_client_service.py  test_clientcard_service.json  test_film_service.py  test_reservation_repository.json  test_reservation_repository.py  test_reservation_service.py
UserInterface/: console.py
(+15 files in other folders)
